<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('fahrzeuge', function (Blueprint $table) {
            $table->id();
            $table->string('kennzeichen')->unique();
            $table->string('marke')->nullable();
            $table->string('modell')->nullable();
            $table->string('farbe')->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('fahrzeuge');
    }
};
